--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	  <h3>Chess Notation Converter</h3>
 	  <p>converts from german notation to english notation</p>
 	  <form id="converter" >
-	    <textarea id="in" class="iotext"></textarea>	
-		<textarea id="out" class="iotext"></textarea>
-		<input class="submitbutton" type="submit" value="convert"><!-- TODO html5 form? -->
+      <textarea id="in" class="iotext" placeholder="input"></textarea>	
+		  <textarea id="out" class="iotext" placeholder="output"></textarea>
+	    <input class="submitbutton" type="submit" value="convert"><!-- TODO html5 form? -->
 	  </form>
     </body>
 </html>
