--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 	  <h3>Chess Notation Converter</h3>
 	  <p>converts from german notation to english notation</p>
 	  <form id="converter" >
-	    <textarea id="in" class="iotext"></textarea>	
-		<textarea id="out" class="iotext"></textarea>
+	    <select name="convert-mode" class="convert-mode">
+          <option value="pgng2e" selected>PGN german 2 english</option>
+          <option value="pgne2g">PGN english 2 german</option>
+        </select> 
+        <textarea id="in" class="iotext" placeholder="input"></textarea>	
+		<textarea id="out" class="iotext" placeholder="output"></textarea>
 		<input class="submitbutton" type="submit" value="convert"><!-- TODO html5 form? -->
 	  </form>
     </body>
