changed input submit to button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </select> 
         <textarea id="in" class="iotext" placeholder="input"></textarea>	
 		<textarea id="out" class="iotext" placeholder="output"></textarea>
-		<input class="submitbutton" type="submit" value="convert"><!-- TODO html5 form? -->
+		<input class="submitbutton" type="button" onclick="convert()" value="convert">
 	  </form>
     </body>
 </html>
